--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -148,7 +149,89 @@
             </ul>
         </div>
 
-        <!-- Additional sections can be added similarly -->
+        <!-- Section 4: Git and GitHub -->
+        <div class="section">
+            <h2>4. Git and GitHub - Versioning</h2>
+            <ul>
+                <li>What is Git?</li>
+                <li>What is the VCS?</li>
+                <li>What is SCM?</li>
+                <li>What is Branch?</li>
+                <li>What is Tag?</li>
+                <li>Git Administration</li>
+                <li>Git Commands</li>
+                <li>Working with Git from a Developer Perspective</li>
+                <li>SSH Key Generation</li>
+                <li>PAT Creation</li>
+                <li>Cloning Repositories/Fork</li>
+                <li>Merging Branches</li>
+                <li>Branching Strategy</li>
+                <li>Best Practices for Releases/Code Commits</li>
+            </ul>
+        </div>
+
+        <!-- Section 5: Maven -->
+        <div class="section">
+            <h2>5. Maven</h2>
+            <ul>
+                <li>Introduction</li>
+                <li>Features & Benefits of Maven</li>
+                <li>Installation (Maven Environment Setup)</li>
+                <li>Directory Structure</li>
+                <li>Content of pom.xml</li>
+                <li>Maven Repositories</li>
+                <li>Maven Life Cycles</li>
+                <li>Executing Examples</li>
+                <li>Maven Multi Modules (Parent & Child pom, Maven Profiles)</li>
+            </ul>
+        </div>
+
+        <!-- Section 6: Tomcat / JBoss -->
+        <div class="section">
+            <h2>6. Tomcat / JBoss</h2>
+            <ul>
+                <li>Introduction</li>
+                <li>Difference between App Server and Web Server</li>
+                <li>Understanding of Web Servers, App Servers, and Database Servers</li>
+                <li>Installation (Windows and Linux)</li>
+                <li>Directory Structure</li>
+                <li>Start/Stop Tomcat Server</li>
+                <li>User Creation</li>
+                <li>Roles</li>
+                <li>Port Number Change</li>
+                <li>Application Deployment (Admin Console & Webapps Folder)</li>
+                <li>Tomcat Tuning</li>
+                <li>Data Source Creation</li>
+            </ul>
+        </div>
+
+        <!-- Section 7: Apache HTTP Server -->
+        <div class="section">
+            <h2>7. Apache HTTP Server</h2>
+            <ul>
+                <li>Introduction</li>
+                <li>Installation</li>
+                <li>Directory Structure</li>
+                <li>Start HTTP Server</li>
+                <li>Deploy Static Web Application</li>
+            </ul>
+        </div>
+
+        <!-- Section 8: SonarQube -->
+        <div class="section">
+            <h2>8. SonarQube</h2>
+            <ul>
+                <li>Introduction</li>
+                <li>Pre-Requisites</li>
+                <li>Architecture</li>
+                <li>Installation</li>
+                <li>Change Port Number</li>
+                <li>Execution</li>
+                <li>Administration (Users, Projects, Tokens, Quality Profiles & Gates)</li>
+            </ul>
+        </div>
+
+        <!-- Additional sections like Jenkins, Docker, Kubernetes, etc. -->
 
         <!-- Tools Section with Logos -->
         <section id="tools">
@@ -157,7 +240,9 @@
                 <h3>CI/CD and Automation</h3>
                 <p>
                     <img src="https://img.shields.io/badge/-Jenkins-D24939?&style=for-the-badge&logo=Jenkins&logoColor=white" alt="Jenkins">
-                    <img src="https://img.shields.io/badge/-GitHub_Actions-2088FF?&style=for-the-badge&logo=GitHub-Actions&logoColor=white" alt="GitHub Actions">
+                    <img src="https://img.shields.io/badge/-GitHub_Actions-2088FF?&style=for-the-badge&
+
+logo=GitHub-Actions&logoColor=white" alt="GitHub Actions">
                     <img src="https://img.shields.io/badge/-Terraform-623CE4?&style=for-the-badge&logo=Terraform&logoColor=white" alt="Terraform">
                     <img src="https://img.shields.io/badge/-Ansible-EE0000?&style=for-the-badge&logo=Ansible&logoColor=white" alt="Ansible">
                     <img src="https://img.shields.io/badge/-Nexus-4E73B9?&style=for-the-badge&logo=Sonatype&logoColor=white" alt="Nexus">
@@ -197,3 +282,5 @@
     </div>
 </body>
 </html>
+
+
