--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -124,7 +123,7 @@ html
                 <li>Create EC2 Instance in AWS</li>
                 <li>Understand Linux Command Line</li>
                 <li>Linux File/Directory Structure</li>
-                <li>Linux Commands: mkdir, cat, service, userdel, ls, head, uptime...</li>
+                <li>Linux Commands: mkdir, cat, service, userdel, ls, head, uptime, tree, find, sed, zip, grep, chmod, chown, etc.</li>
             </ul>
         </div>
 
@@ -144,7 +143,7 @@ html
                 <li>String Manipulation</li>
                 <li>Arithmetic Operations</li>
                 <li>User Interaction using read command</li>
-                <li>Control Commands (if, for, while loop, switch case)</li>
+                <li>Control Commands: if, for, while loop, switch case</li>
                 <li>Functions and Pipes</li>
             </ul>
         </div>
@@ -231,7 +230,111 @@ html
             </ul>
         </div>
 
-        <!-- Additional sections like Jenkins, Docker, Kubernetes, etc. -->
+        <!-- Section 9: Nexus -->
+        <div class="section">
+            <h2>9. Nexus</h2>
+            <ul>
+                <li>Introduction</li>
+                <li>Installation</li>
+                <li>Password and Email Change for Admin User</li>
+                <li>Email Server Configuration</li>
+                <li>Port Number and Context Root Change</li>
+                <li>Nexus Directory Structure</li>
+                <li>Create Repositories</li>
+                <li>Integrate Maven with Nexus</li>
+                <li>User Creation</li>
+            </ul>
+        </div>
+
+        <!-- Section 10: Jenkins -->
+        <div class="section">
+            <h2>10. Jenkins</h2>
+            <ul>
+                <li>Introduction to CI/CD/CD</li>
+                <li>Installation on Linux Server</li>
+                <li>Create Maven Project (Freestyle and Maven Project Type)</li>
+                <li>Integrate Maven, Nexus, SonarQube, and Tomcat with Jenkins</li>
+                <li>Plugin Management and External Plugins Installation</li>
+                <li>Jenkins Security and Access Control</li>
+                <li>Pipeline and Multibranch Pipeline Jobs</li>
+                <li>Master/Slave Setup, Backup, and Migration</li>
+            </ul>
+        </div>
+
+        <!-- Section 11: Docker -->
+        <div class="section">
+            <h2>11. Docker - 18 hours</h2>
+            <ul>
+                <li>Docker Introduction</li>
+                <li>Containerization Vs Virtualization</li>
+                <li>Docker Vs Virtual Machine</li>
+                <li>Docker Installation</li>
+                <li>Dockerfile, Docker Images, and Containers</li>
+                <li>Docker Networks and Volumes</li>
+                <li>Docker Private Repo and Compose</li>
+                <li>Docker Swarm</li>
+            </ul>
+        </div>
+
+        <!-- Section 12: Kubernetes -->
+        <div class="section">
+            <h2>12. Kubernetes - 27 hours (CKA)</h2>
+            <ul>
+                <li>Kubernetes Introduction</li>
+                <li>Architecture</li>
+                <li>Kubernetes Cluster Setup (Self-Managed, KOPS, EKS using Terraform)</li>
+                <li>Kubernetes Objects (Pods, ReplicaSets, Deployments, etc.)</li>
+                <li>Service Types (ClusterIP, NodePort, Load Balancers)</li>
+                <li>Volumes, Persistent Volumes, ConfigMaps & Secrets</li>
+                <li>Monitoring with Prometheus and Grafana</li>
+            </ul>
+        </div>
+
+        <!-- Section 13: Ansible -->
+        <div class="section">
+            <h2>13. Ansible</h2>
+            <ul>
+                <li>Introduction</li>
+                <li>Architecture</li>
+                <li>SSH Key Generation</li>
+                <li>Ansible Ad-hoc Commands and Playbooks</li>
+                <li>Execution of Playbooks</li>
+                <li>Ansible Modules</li>
+                <li>Variables, Roles, and Dynamic Inventory</li>
+            </ul>
+        </div>
+
+        <!-- Section 14: AWS -->
+        <div class="section">
+            <h2>14. AWS</h2>
+            <ul>
+                <li>Cloud & AWS Infrastructure</li>
+                <li>Managed and Self-Managed Infrastructures</li>
+                <li>IaaS, PaaS, SaaS</li>
+                <li>EC2 Setup and Security Groups</li>
+                <li>EBS, EFS, S3 Essentials</li>
+                <li>VPC, IAM, AWS CLI Setup</li>
+            </ul>
+        </div>
+
+        <!-- Section 15: Infrastructure as Code -->
+        <div class="section">
+            <h2>15. Infrastructure as Code</h2>
+            <ul>
+                <li>Introduction to Terraform</li>
+                <li>Importance of Terraform</li>
+                <li>Installation on Windows</li>
+            </ul>
+        </div>
+
+        <!-- Section 16: Projects -->
+        <div class="section">
+            <h2>16. Projects</h2>
+            <ul>
+                <li>Jenkins Integration with GitHub, Maven, SonarQube, Nexus, and Tomcat</li>
+                <li>Jenkins Integration with Docker and Kubernetes</li>
+            </ul>
+        </div>
 
         <!-- Tools Section with Logos -->
         <section id="tools">
@@ -240,9 +343,7 @@ html
                 <h3>CI/CD and Automation</h3>
                 <p>
                     <img src="https://img.shields.io/badge/-Jenkins-D24939?&style=for-the-badge&logo=Jenkins&logoColor=white" alt="Jenkins">
-                    <img src="https://img.shields.io/badge/-GitHub_Actions-2088FF?&style=for-the-badge&
-
-logo=GitHub-Actions&logoColor=white" alt="GitHub Actions">
+                    <img src="https://img.shields.io/badge/-GitHub_Actions-2088FF?&style=for-the-badge&logo=GitHub-Actions&logoColor=white" alt="GitHub Actions">
                     <img src="https://img.shields.io/badge/-Terraform-623CE4?&style=for-the-badge&logo=Terraform&logoColor=white" alt="Terraform">
                     <img src="https://img.shields.io/badge/-Ansible-EE0000?&style=for-the-badge&logo=Ansible&logoColor=white" alt="Ansible">
                     <img src="https://img.shields.io/badge/-Nexus-4E73B9?&style=for-the-badge&logo=Sonatype&logoColor=white" alt="Nexus">
