--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
             <ul>
                 <li>Jenkins Integration with GitHub, Maven, SonarQube, Nexus, and Tomcat</li>
                 <li>Jenkins Integration with Docker and Kubernetes</li>
+                <li>Real-life CI/CD Project Implementations</li>
             </ul>
         </div>
 
@@ -383,5 +384,4 @@
     </div>
 </body>
 </html>
-
 
