--- a/index.html
+++ b/index.html
@@ -127,9 +127,102 @@
             </ul>
         </div>
 
+         <div class="section">
+            <h2>3. Linux/h2>
+            <ul>
+                                <li>mkdir</li>
+                                <li>cat</li>
+                                <li>service</li>
+                                <li>userdel</li>
+                                <li>ls</li>
+                                <li>head</li>
+                                <li>uptime</li>
+                                <li>groupdel</li>
+                                <li>uname</li>
+                                <li>tree</li>
+                                <li>cat /etc/*releases</li>
+                                <li>tail</li>
+                                <li>last</li>
+                                <li>crontab</li>
+                                <li>cd</li>
+                                <li>watch</li>
+                                <li>more</li>
+                                <li>ps</li>
+                                <li>ssh</li>
+                                <li>netstat</li>
+                                <li>pwd</li>
+                                <li>less</li>
+                                <li>kill</li>
+                                <li>scp</li>
+                                <li>exit/logout/ctrl+d</li>
+                                <li>rmdir</li>
+                                <li>sort</li>
+                                <li>top</li>
+                                <li>rsync</li>
+                                <li>touch</li>
+                                <li>tr</li>
+                                <li>sar</li>
+                                <li>ssh-keygen</li>
+                                <li>find</li>
+                                <li>sed</li>
+                                <li>zip</li>
+                                <li>ssh-copy-id</li>
+                                <li>umask</li>
+                                <li>grep</li>
+                                <li>unzip</li>
+                                <li>awk</li>
+                                <li>chmod</li>
+                                <li>chown</li>
+                                <li>useradd</li>
+                                <li>chgrp</li>
+                                <li>whoami</li>
+                                <li>passwd</li>
+                                <li>dmidecode</li>
+                                <li>cp</li>
+                                <li>whereis</li>
+                                <li>chage</li>
+                                <li>mail</li>
+                                <li>mv</li>
+                                <li>date</li>
+                                <li>groupadd</li>
+                                <li>clear</li>
+                                <li>rm</li>
+                                <li>df</li>
+                                <li>usermod</li>
+                                <li>cal</li>
+                                <li>file</li>
+                                <li>du</li>
+                                <li>id</li>
+                                <li>wget</li>
+                                <li>wc</li>
+                                <li>hostname</li>
+                                <li>lid</li>
+                                <li>tee</li>
+                                <li>in</li>
+                                <li>ipconfig</li>
+                                <li>su</li>
+                                <li>script</li>
+                                <li>vim</li>
+                                <li>man</li>
+                                <li>sudo</li>
+                                <li>ping</li>
+                                <li>nano</li>
+                                <li>help</li>
+                                <li>users</li>
+                                <li>telnet</li>
+                                <li>echo</li>
+                                <li>info</li>
+                                <li>groups</li>
+                                <li>history</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
         <!-- Section 3: Shell Scripting Introduction -->
         <div class="section">
-            <h2>3. Shell Scripting Introduction</h2>
+            <h2>4. Shell Scripting Introduction</h2>
             <ul>
                 <li>What is Shell?</li>
                 <li>Types of Shells</li>
@@ -150,7 +243,7 @@
 
         <!-- Section 4: Git and GitHub -->
         <div class="section">
-            <h2>4. Git and GitHub - Versioning</h2>
+            <h2>5. Git and GitHub - Versioning</h2>
             <ul>
                 <li>What is Git?</li>
                 <li>What is the VCS?</li>
@@ -171,7 +264,7 @@
 
         <!-- Section 5: Maven -->
         <div class="section">
-            <h2>5. Maven</h2>
+            <h2>6. Maven</h2>
             <ul>
                 <li>Introduction</li>
                 <li>Features & Benefits of Maven</li>
@@ -187,7 +280,7 @@
 
         <!-- Section 6: Tomcat / JBoss -->
         <div class="section">
-            <h2>6. Tomcat / JBoss</h2>
+            <h2>7. Tomcat / JBoss</h2>
             <ul>
                 <li>Introduction</li>
                 <li>Difference between App Server and Web Server</li>
@@ -206,7 +299,7 @@
 
         <!-- Section 7: Apache HTTP Server -->
         <div class="section">
-            <h2>7. Apache HTTP Server</h2>
+            <h2>8. Apache HTTP Server</h2>
             <ul>
                 <li>Introduction</li>
                 <li>Installation</li>
@@ -218,7 +311,7 @@
 
         <!-- Section 8: SonarQube -->
         <div class="section">
-            <h2>8. SonarQube</h2>
+            <h2>9. SonarQube</h2>
             <ul>
                 <li>Introduction</li>
                 <li>Pre-Requisites</li>
@@ -232,7 +325,7 @@
 
         <!-- Section 9: Nexus -->
         <div class="section">
-            <h2>9. Nexus</h2>
+            <h2>10. Nexus</h2>
             <ul>
                 <li>Introduction</li>
                 <li>Installation</li>
@@ -248,7 +341,7 @@
 
         <!-- Section 10: Jenkins -->
         <div class="section">
-            <h2>10. Jenkins</h2>
+            <h2>11. Jenkins</h2>
             <ul>
                 <li>Introduction to CI/CD/CD</li>
                 <li>Installation on Linux Server</li>
@@ -263,7 +356,7 @@
 
         <!-- Section 11: Docker -->
         <div class="section">
-            <h2>11. Docker - 18 hours</h2>
+            <h2>12. Docker - 18 hours</h2>
             <ul>
                 <li>Docker Introduction</li>
                 <li>Containerization Vs Virtualization</li>
@@ -278,7 +371,7 @@
 
         <!-- Section 12: Kubernetes -->
         <div class="section">
-            <h2>12. Kubernetes - 27 hours (CKA)</h2>
+            <h2>13. Kubernetes - 27 hours (CKA)</h2>
             <ul>
                 <li>Kubernetes Introduction</li>
                 <li>Architecture</li>
@@ -292,7 +385,7 @@
 
         <!-- Section 13: Ansible -->
         <div class="section">
-            <h2>13. Ansible</h2>
+            <h2>14. Ansible</h2>
             <ul>
                 <li>Introduction</li>
                 <li>Architecture</li>
@@ -306,7 +399,7 @@
 
         <!-- Section 14: AWS -->
         <div class="section">
-            <h2>14. AWS</h2>
+            <h2>15. AWS</h2>
             <ul>
                 <li>Cloud & AWS Infrastructure</li>
                 <li>Managed and Self-Managed Infrastructures</li>
