--- a/index.html
+++ b/index.html
@@ -127,98 +127,98 @@
             </ul>
         </div>
 
-         <div class="section">
-            <h2>3. Linux/h2>
-                                <li>mkdir</li>
-                                <li>cat</li>
-                                <li>service</li>
-                                <li>userdel</li>
-                                <li>ls</li>
-                                <li>head</li>
-                                <li>uptime</li>
-                                <li>groupdel</li>
-                                <li>uname</li>
-                                <li>tree</li>
-                                <li>cat /etc/*releases</li>
-                                <li>tail</li>
-                                <li>last</li>
-                                <li>crontab</li>
-                                <li>cd</li>
-                                <li>watch</li>
-                                <li>more</li>
-                                <li>ps</li>
-                                <li>ssh</li>
-                                <li>netstat</li>
-                                <li>pwd</li>
-                                <li>less</li>
-                                <li>kill</li>
-                                <li>scp</li>
-                                <li>exit/logout/ctrl+d</li>
-                                <li>rmdir</li>
-                                <li>sort</li>
-                                <li>top</li>
-                                <li>rsync</li>
-                                <li>touch</li>
-                                <li>tr</li>
-                                <li>sar</li>
-                                <li>ssh-keygen</li>
-                                <li>find</li>
-                                <li>sed</li>
-                                <li>zip</li>
-                                <li>ssh-copy-id</li>
-                                <li>umask</li>
-                                <li>grep</li>
-                                <li>unzip</li>
-                                <li>awk</li>
-                                <li>chmod</li>
-                                <li>chown</li>
-                                <li>useradd</li>
-                                <li>chgrp</li>
-                                <li>whoami</li>
-                                <li>passwd</li>
-                                <li>dmidecode</li>
-                                <li>cp</li>
-                                <li>whereis</li>
-                                <li>chage</li>
-                                <li>mail</li>
-                                <li>mv</li>
-                                <li>date</li>
-                                <li>groupadd</li>
-                                <li>clear</li>
-                                <li>rm</li>
-                                <li>df</li>
-                                <li>usermod</li>
-                                <li>cal</li>
-                                <li>file</li>
-                                <li>du</li>
-                                <li>id</li>
-                                <li>wget</li>
-                                <li>wc</li>
-                                <li>hostname</li>
-                                <li>lid</li>
-                                <li>tee</li>
-                                <li>in</li>
-                                <li>ipconfig</li>
-                                <li>su</li>
-                                <li>script</li>
-                                <li>vim</li>
-                                <li>man</li>
-                                <li>sudo</li>
-                                <li>ping</li>
-                                <li>nano</li>
-                                <li>help</li>
-                                <li>users</li>
-                                <li>telnet</li>
-                                <li>echo</li>
-                                <li>info</li>
-                                <li>groups</li>
-                                <li>history</li>
-                        </li>
-                    </ul>
-                </li>
+        <!-- Section 3: Linux Commands -->
+        <div class="section">
+            <h2>3. Linux</h2>
+            <ul>
+                <li>mkdir</li>
+                <li>cat</li>
+                <li>service</li>
+                <li>userdel</li>
+                <li>ls</li>
+                <li>head</li>
+                <li>uptime</li>
+                <li>groupdel</li>
+                <li>uname</li>
+                <li>tree</li>
+                <li>cat /etc/*releases</li>
+                <li>tail</li>
+                <li>last</li>
+                <li>crontab</li>
+                <li>cd</li>
+                <li>watch</li>
+                <li>more</li>
+                <li>ps</li>
+                <li>ssh</li>
+                <li>netstat</li>
+                <li>pwd</li>
+                <li>less</li>
+                <li>kill</li>
+                <li>scp</li>
+                <li>exit/logout/ctrl+d</li>
+                <li>rmdir</li>
+                <li>sort</li>
+                <li>top</li>
+                <li>rsync</li>
+                <li>touch</li>
+                <li>tr</li>
+                <li>sar</li>
+                <li>ssh-keygen</li>
+                <li>find</li>
+                <li>sed</li>
+                <li>zip</li>
+                <li>ssh-copy-id</li>
+                <li>umask</li>
+                <li>grep</li>
+                <li>unzip</li>
+                <li>awk</li>
+                <li>chmod</li>
+                <li>chown</li>
+                <li>useradd</li>
+                <li>chgrp</li>
+                <li>whoami</li>
+                <li>passwd</li>
+                <li>dmidecode</li>
+                <li>cp</li>
+                <li>whereis</li>
+                <li>chage</li>
+                <li>mail</li>
+                <li>mv</li>
+                <li>date</li>
+                <li>groupadd</li>
+                <li>clear</li>
+                <li>rm</li>
+                <li>df</li>
+                <li>usermod</li>
+                <li>cal</li>
+                <li>file</li>
+                <li>du</li>
+                <li>id</li>
+                <li>wget</li>
+                <li>wc</li>
+                <li>hostname</li>
+                <li>lid</li>
+                <li>tee</li>
+                <li>in</li>
+                <li>ipconfig</li>
+                <li>su</li>
+                <li>script</li>
+                <li>vim</li>
+                <li>man</li>
+                <li>sudo</li>
+                <li>ping</li>
+                <li>nano</li>
+                <li>help</li>
+                <li>users</li>
+                <li>telnet</li>
+                <li>echo</li>
+                <li>info</li>
+                <li>groups</li>
+                <li>history</li>
             </ul>
         </div>
-        <!-- Section 3: Shell Scripting Introduction -->
+
+        <!-- Section 4: Shell Scripting Introduction -->
         <div class="section">
             <h2>4. Shell Scripting Introduction</h2>
             <ul>
@@ -239,7 +239,7 @@
             </ul>
         </div>
 
-        <!-- Section 4: Git and GitHub -->
+        <!-- Section 5: Git and GitHub -->
         <div class="section">
             <h2>5. Git and GitHub - Versioning</h2>
             <ul>
@@ -260,7 +260,7 @@
             </ul>
         </div>
 
-        <!-- Section 5: Maven -->
+        <!-- Section 6: Maven -->
         <div class="section">
             <h2>6. Maven</h2>
             <ul>
@@ -276,7 +276,7 @@
             </ul>
         </div>
 
-        <!-- Section 6: Tomcat / JBoss -->
+        <!-- Section 7: Tomcat / JBoss -->
         <div class="section">
             <h2>7. Tomcat / JBoss</h2>
             <ul>
@@ -295,7 +295,7 @@
             </ul>
         </div>
 
-        <!-- Section 7: Apache HTTP Server -->
+        <!-- Section 8: Apache HTTP Server -->
         <div class="section">
             <h2>8. Apache HTTP Server</h2>
             <ul>
@@ -307,7 +307,7 @@
             </ul>
         </div>
 
-        <!-- Section 8: SonarQube -->
+        <!-- Section 9: SonarQube -->
         <div class="section">
             <h2>9. SonarQube</h2>
             <ul>
@@ -321,7 +321,7 @@
             </ul>
         </div>
 
-        <!-- Section 9: Nexus -->
+        <!-- Section 10: Nexus -->
         <div class="section">
             <h2>10. Nexus</h2>
             <ul>
@@ -337,7 +337,7 @@
             </ul>
         </div>
 
-        <!-- Section 10: Jenkins -->
+        <!-- Section 11: Jenkins -->
         <div class="section">
             <h2>11. Jenkins</h2>
             <ul>
@@ -352,7 +352,7 @@
             </ul>
         </div>
 
-        <!-- Section 11: Docker -->
+        <!-- Section 12: Docker -->
         <div class="section">
             <h2>12. Docker - 18 hours</h2>
             <ul>
@@ -381,7 +381,7 @@
             </ul>
         </div>
 
-        <!-- Section 13: Ansible -->
+        <!-- Section 14: Ansible -->
         <div class="section">
             <h2>14. Ansible</h2>
             <ul>
@@ -395,7 +395,7 @@
             </ul>
         </div>
 
-        <!-- Section 14: AWS -->
+        <!-- Section 15: AWS -->
         <div class="section">
             <h2>15. AWS</h2>
             <ul>
@@ -408,9 +408,9 @@
             </ul>
         </div>
 
-        <!-- Section 15: Infrastructure as Code -->
+        <!-- Section 16: Infrastructure as Code -->
         <div class="section">
-            <h2>15. Infrastructure as Code</h2>
+            <h2>16. Infrastructure as Code</h2>
             <ul>
                 <li>Introduction to Terraform</li>
                 <li>Importance of Terraform</li>
@@ -418,9 +418,9 @@
             </ul>
         </div>
 
-        <!-- Section 16: Projects -->
+        <!-- Section 17: Projects -->
         <div class="section">
-            <h2>16. Projects</h2>
+            <h2>17. Projects</h2>
             <ul>
                 <li>Jenkins Integration with GitHub, Maven, SonarQube, Nexus, and Tomcat</li>
                 <li>Jenkins Integration with Docker and Kubernetes</li>
