--- a/index.html
+++ b/index.html
@@ -121,14 +121,17 @@
             <ul>
                 <li>Create an account in AWS</li>
                 <li>Create EC2 Instance in AWS</li>
-                <li>Understand Linux Command Line</li>
-                <li>Linux File/Directory Structure</li>
-                <li>Linux Commands: mkdir, cat, service, userdel, ls, head, uptime, tree, find, sed, zip, grep, chmod, chown, etc.</li>
+                <li>Intall Git and GitHub</li>
+                <li>Intall Mobaxterm</li>
+                <li>Intall Terraform</li>
+                <li>Create DockerHub Account</li> 
+                <li>Setup Jira and Slack Channels</li>
             </ul>
         </div>
 
         <!-- Section 3: Linux Commands -->
-        <div class="section">
+       <!-- Section 3: Linux Commands -->
+        <div class="section linux-section">
             <h2>3. Linux</h2>
             <ul>
                 <li>mkdir</li>
@@ -217,6 +220,7 @@
                 <li>history</li>
             </ul>
         </div>
+
 
         <!-- Section 4: Shell Scripting Introduction -->
         <div class="section">
