--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <!-- Section 1: DevOps Introduction -->
-        <div class="section">
+         <div class="section">
             <h2>1. DevOps Introduction (Understanding DevOps)</h2>
             <ul>
                 <li>Software Development Life Cycles (SDLC)</li>
@@ -106,14 +106,17 @@
                 <li>DevOps Tools</li>
                 <li>Prerequisites:
                     <ul>
-                        <li>Creating a Zoom account</li>
-                        <li>Download Mobaxterm and VS Code</li>
-                        <li>Create AWS account (Free Tier)</li>
-                        <li>Create GitHub Account</li>
+                        <li><a href="https://zoom.us/" target="_blank">Create a Zoom account</a></li>
+                        <li><a href="https://mobaxterm.mobatek.net/download.html" target="_blank">Download Mobaxterm</a></li>
+                        <li><a href="https://code.visualstudio.com/download" target="_blank">Download VS Code</a></li>
+                        <li><a href="https://aws.amazon.com/free/" target="_blank">Create an AWS account (Free Tier)</a></li>
+                        <li><a href="https://github.com/" target="_blank">Create a GitHub account</a></li>
+                        <li><a href="https://www.terraform.io/" target="_blank">Download Terraform</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
+
 
         <!-- Section 2: Installing Pre-requisite Software -->
         <div class="section">
