--- a/index.html
+++ b/index.html
@@ -133,95 +133,56 @@
         </div>
 
         <!-- Section 3: Linux Commands -->
-       <!-- Section 3: Linux Commands -->
         <div class="section linux-section">
             <h2>3. Linux</h2>
-            <ul>
-                <li>mkdir</li>
-                <li>cat</li>
-                <li>service</li>
-                <li>userdel</li>
-                <li>ls</li>
-                <li>head</li>
-                <li>uptime</li>
-                <li>groupdel</li>
-                <li>uname</li>
-                <li>tree</li>
-                <li>cat /etc/*releases</li>
-                <li>tail</li>
-                <li>last</li>
-                <li>crontab</li>
-                <li>cd</li>
-                <li>watch</li>
-                <li>more</li>
-                <li>ps</li>
-                <li>ssh</li>
-                <li>netstat</li>
-                <li>pwd</li>
-                <li>less</li>
-                <li>kill</li>
-                <li>scp</li>
-                <li>exit/logout/ctrl+d</li>
-                <li>rmdir</li>
-                <li>sort</li>
-                <li>top</li>
-                <li>rsync</li>
-                <li>touch</li>
-                <li>tr</li>
-                <li>sar</li>
-                <li>ssh-keygen</li>
-                <li>find</li>
-                <li>sed</li>
-                <li>zip</li>
-                <li>ssh-copy-id</li>
-                <li>umask</li>
-                <li>grep</li>
-                <li>unzip</li>
-                <li>awk</li>
-                <li>chmod</li>
-                <li>chown</li>
-                <li>useradd</li>
-                <li>chgrp</li>
-                <li>whoami</li>
-                <li>passwd</li>
-                <li>dmidecode</li>
-                <li>cp</li>
-                <li>whereis</li>
-                <li>chage</li>
-                <li>mail</li>
-                <li>mv</li>
-                <li>date</li>
-                <li>groupadd</li>
-                <li>clear</li>
-                <li>rm</li>
-                <li>df</li>
-                <li>usermod</li>
-                <li>cal</li>
-                <li>file</li>
-                <li>du</li>
-                <li>id</li>
-                <li>wget</li>
-                <li>wc</li>
-                <li>hostname</li>
-                <li>lid</li>
-                <li>tee</li>
-                <li>in</li>
-                <li>ipconfig</li>
-                <li>su</li>
-                <li>script</li>
-                <li>vim</li>
-                <li>man</li>
-                <li>sudo</li>
-                <li>ping</li>
-                <li>nano</li>
-                <li>help</li>
-                <li>users</li>
-                <li>telnet</li>
-                <li>echo</li>
-                <li>info</li>
-                <li>groups</li>
-                <li>history</li>
-            </ul>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Command</th>
+                        <th>Description</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr><td>mkdir</td><td>Create directories</td></tr>
+                    <tr><td>cat</td><td>View and concatenate files</td></tr>
+                    <tr><td>service</td><td>Run system V init scripts</td></tr>
+                    <tr><td>userdel</td><td>Delete a user account</td></tr>
+                    <tr><td>ls</td><td>List directory contents</td></tr>
+                    <tr><td>head</td><td>Output the first part of files</td></tr>
+                    <tr><td>uptime</td><td>Show system uptime</td></tr>
+                    <tr><td>groupdel</td><td>Delete a group</td></tr>
+                    <tr><td>uname</td><td>Show system information</td></tr>
+                    <tr><td>tree</td><td>List contents of directories in a tree-like format</td></tr>
+                    <tr><td>tail</td><td>Output the last part of files</td></tr>
+                    <tr><td>last</td><td>Show listing of last logged-in users</td></tr>
+                    <tr><td>crontab</td><td>Manage cron jobs</td></tr>
+                    <tr><td>cd</td><td>Change directory</td></tr>
+                    <tr><td>watch</td><td>Execute a program periodically, showing output</td></tr>
+                    <tr><td>ps</td><td>Report a snapshot of current processes</td></tr>
+                    <tr><td>ssh</td><td>OpenSSH SSH client</td></tr>
+                    <tr><td>netstat</td><td>Network statistics</td></tr>
+                    <tr><td>pwd</td><td>Print working directory</td></tr>
+                    <tr><td>less</td><td>View file contents with pagination</td></tr>
+                    <tr><td>kill</td><td>Terminate processes</td></tr>
+                    <tr><td>scp</td><td>Secure copy (remote file copy)</td></tr>
+                    <tr><td>exit/logout/ctrl+d</td><td>Exit the shell</td></tr>
+                    <tr><td>rmdir</td><td>Remove directories</td></tr>
+                    <tr><td>top</td><td>Display Linux tasks</td></tr>
+                    <tr><td>rsync</td><td>Remote file and directory synchronization</td></tr>
+                    <tr><td>touch</td><td>Create empty files or update timestamps</td></tr>
+                    <tr><td>tr</td><td>Translate or delete characters</td></tr>
+                    <tr><td>sar</td><td>System activity report</td></tr>
+                    <tr><td>ssh-keygen</td><td>Generate SSH keys</td></tr>
+                    <tr><td>find</td><td>Search for files in a directory hierarchy</td></tr>
+                    <tr><td>zip/unzip</td><td>Compress and decompress files</td></tr>
+                    <tr><td>awk</td><td>Pattern scanning and processing language</td></tr>
+                    <tr><td>chmod</td><td>Change file modes or Access Control Lists</td></tr>
+                    <tr><td>chown</td><td>Change file owner and group</td></tr>
+                    <tr><td>useradd</td><td>Create a new user</td></tr>
+                    <tr><td>ping</td><td>Send ICMP echo requests to network hosts</td></tr>
+                    <!-- Add more commands as needed -->
+                </tbody>
+            </table>
         </div>
 
 
