--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
         </div>
 
         <!-- Section 1: DevOps Introduction -->
-         <div class="section">
+          <!-- Section 1: DevOps Introduction -->
+        <div class="section">
             <h2>1. DevOps Introduction (Understanding DevOps)</h2>
             <ul>
                 <li>Software Development Life Cycles (SDLC)</li>
@@ -116,7 +117,6 @@
                 </li>
             </ul>
         </div>
-
 
         <!-- Section 2: Installing Pre-requisite Software -->
         <div class="section">
