--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         <!-- Section 3: Linux Commands -->
         <div class="section linux-section">
-            <h2>3. Linux</h2>
+            <h2>3. Linux - 20 Hours</h2>
             <table>
                 <thead>
                     <tr>
@@ -208,7 +208,7 @@
 
         <!-- Section 5: Git and GitHub -->
         <div class="section">
-            <h2>5. Git and GitHub - Versioning</h2>
+            <h2>5. Git and GitHub - Versioning 14 hours</h2>
             <ul>
                 <li>What is Git?</li>
                 <li>What is the VCS?</li>
@@ -229,7 +229,7 @@
 
         <!-- Section 6: Maven -->
         <div class="section">
-            <h2>6. Maven</h2>
+            <h2>6. Maven  14 hours</h2>
             <ul>
                 <li>Introduction</li>
                 <li>Features & Benefits of Maven</li>
@@ -245,7 +245,7 @@
 
         <!-- Section 7: Tomcat / JBoss -->
         <div class="section">
-            <h2>7. Tomcat / JBoss</h2>
+            <h2>7. Tomcat / JBoss 18 Hours</h2>
             <ul>
                 <li>Introduction</li>
                 <li>Difference between App Server and Web Server</li>
@@ -276,7 +276,7 @@
 
         <!-- Section 9: SonarQube -->
         <div class="section">
-            <h2>9. SonarQube</h2>
+            <h2>9. SonarQube 15 Hours</h2>
             <ul>
                 <li>Introduction</li>
                 <li>Pre-Requisites</li>
@@ -290,7 +290,7 @@
 
         <!-- Section 10: Nexus -->
         <div class="section">
-            <h2>10. Nexus</h2>
+            <h2>10. Nexus 10 hours</h2>
             <ul>
                 <li>Introduction</li>
                 <li>Installation</li>
@@ -306,7 +306,7 @@
 
         <!-- Section 11: Jenkins -->
         <div class="section">
-            <h2>11. Jenkins</h2>
+            <h2>11. Jenkins 26 Hours</h2>
             <ul>
                 <li>Introduction to CI/CD/CD</li>
                 <li>Installation on Linux Server</li>
@@ -321,7 +321,7 @@
 
         <!-- Section 12: Docker -->
         <div class="section">
-            <h2>12. Docker - 18 hours</h2>
+            <h2>12. Docker - 18 Hours</h2>
             <ul>
                 <li>Docker Introduction</li>
                 <li>Containerization Vs Virtualization</li>
@@ -336,7 +336,7 @@
 
         <!-- Section 12: Kubernetes -->
         <div class="section">
-            <h2>13. Kubernetes - 27 hours (CKA)</h2>
+            <h2>13. Kubernetes - 27 Hours (CKA)</h2>
             <ul>
                 <li>Kubernetes Introduction</li>
                 <li>Architecture</li>
@@ -350,7 +350,7 @@
 
         <!-- Section 14: Ansible -->
         <div class="section">
-            <h2>14. Ansible</h2>
+            <h2>14. Ansible 20 Hours</h2>
             <ul>
                 <li>Introduction</li>
                 <li>Architecture</li>
@@ -364,7 +364,7 @@
 
         <!-- Section 15: AWS -->
         <div class="section">
-            <h2>15. AWS</h2>
+            <h2>15. AWS 30 Hours</h2>
             <ul>
                 <li>Cloud & AWS Infrastructure</li>
                 <li>Managed and Self-Managed Infrastructures</li>
@@ -377,7 +377,7 @@
 
         <!-- Section 16: Infrastructure as Code -->
         <div class="section">
-            <h2>16. Infrastructure as Code</h2>
+            <h2>16. Infrastructure as Code 20 Hours</h2>
             <ul>
                 <li>Introduction to Terraform</li>
                 <li>Importance of Terraform</li>
