--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                         <li><a href="https://aws.amazon.com/free/" target="_blank">Create an AWS account (Free Tier)</a></li>
                         <li><a href="https://github.com/" target="_blank">Create a GitHub account</a></li>
                         <li><a href="https://www.terraform.io/" target="_blank">Download Terraform</a></li>
+                        <li><a href="https://desktop.github.com/download/" target="_blank">Download GitHub Desktop</a></li>
                     </ul>
                 </li>
             </ul>
